# zhilink-tianhe-enterprise-ai-workspace

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: __init__.py  body_limit.py  main.py  schemas.py  service.py
data/: contract_risk_rules.json  policy_directions.json  tianhe_knowledge.json
docs/: DEPLOYMENT.md
frontend/: index.html
frontend/assets/: app.js  bugfixes.js  style.css
src/zhilian_tianhe_agent/: __init__.py  agents.py  constants.py  llm_client.py  prompts.py  reporting.py  rule_engine.py  utils.py
tests/: test_api.py  test_body_limit.py  test_frontend_generation_fallback.py  test_llm_client_security.py  test_regressions.py
